# Launcher

./: .eslintrc.json  .prettierrc  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  oauth_plugin.rs
src-tauri/src/asset_manager/: asset.rs  asset_worker.rs  errors.rs  mod.rs  version.rs
src-tauri/src/auth_route/: accounts.rs  auth_process.rs  auther.rs  client.rs  code_extractor.rs  code_listener.rs  code_processor.rs  errors.rs  mod.rs  oauth.rs  tokens.rs  utils.rs
src-tauri/src/files/: accounts.rs  errors.rs  mod.rs  settings.rs  storage.rs
src-tauri/src/version_manager/: asset.rs  errors.rs  games.rs  manager.rs  mod.rs  version.rs
src/assets/: global.scss
src/components/button/: button.module.scss  button.tsx
src/components/optionsbox/: OptionsBox.tsx  optionsbox.module.scss
src/components/skinHead/: skinhead.tsx
src/hooks/: useArray.ts  useOutsideClick.ts
src/stores/: account.ts  game.ts  stores.ts
src/views/play/: account.tsx  loadingScreen.tsx  menu.module.scss  menu.tsx  play-box.tsx  play.module.scss  play.tsx
src/views/play/accounts/: account.tsx  accountPicker.tsx
src/views/play/games/: game.tsx  gamePicker.tsx
