[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "wry"] }
reqwest = { version = "0.11.11", features = ["json"] }
rand = "0.8.5"
anyhow = "1.0.61"
regex = "1.6.0"
thiserror = "1.0.32"
home = "0.5.3"
tokio = { version = "1.20.1", features = ["macros"] }
sha1 = "0.10.1"
url = "2.2.2"
os_info = "3.5.0"
futures = "0.3.23"
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
num_cpus = "1.13.1"
httparse = "1"
log = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
